# BioSET_Preprocessing

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
bioset_preprocessing/: __init__.py  cli.py  config.py  pipeline.py
bioset_preprocessing/data/: __init__.py  loader.py  metadata.py
bioset_preprocessing/io/: __init__.py  bioset_writer.py  checkpoint.py  export.py  hierarchy.py  profiler.py  results.py
bioset_preprocessing/processing/: __init__.py  morphology.py  overlap.py  thresholding.py  tiling.py
docs/: developer_docs.py
examples/: rechunking.py  run.py  run_one_tile.py  run_test.py
notebooks/: example_script.py  example_usage.ipynb
notebooks/test_results/: checkpoint.json  overlaps.csv  thresholds.csv
notebooks/test_results_all/: analysis.sqlite_tmp-shm
src/bioset_preprocessing/: aggregation.py  checkpoint.py  cli.py  config.py  filtering.py  io.py  pipeline.py  run_cpu.py  run_gpu.py  tiling.py  writer.py
src/bioset_preprocessing/stages/: cc_filter.py  dilation.py  overlaps.py  threshold.py
